# haystacks_expanded

./: .gitignore  README.md  environment.yml  environment_mac.yml  pyproject.toml  queries.json
haystacks_expanded/utils/: collect.py  test_pyktok.py  test_pytiktokapi.py
src/: environment_mac.yml
src/haystacks_expanded/: __main__.py
src/haystacks_expanded/main/: __init__.py  claim_detector.py  data_loader.py  training.py
src/haystacks_expanded/utils/: __init__.py  audio_to_spectrogram.py  custom_ocr.py  data_aug.py  feature_extractor.py  hansardtest.r  processTWFYfiles_edited.py  search.py  sentence_exploder.py
tests/: test_preprocess.py  test_search.py
