[tool.poetry]
name = "haystacks-expanded"
version = "0.1.0"
description = "Haystacks for TikTok and Instagram"
authors = ["Hubert Au <hubertau@tutanota.com>"]
readme = "README.md"
packages = [{include = "haystacks_expanded", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
yt-dlp = "^2023.2.17"
pytest = "^7.2.1"
click = "^8.1.3"
loguru = "^0.6.0"
configparser = "^5.3.0"

[tool.poetry.scripts]
hay = "haystacks_expanded.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
