[tool.poetry]
name = "haystacks"
version = "0.1.0"
description = ""
authors = ["Hubert Au <hubertau@tutanota.com>"]
readme = "README.md"
packages = [{include = "haystacks_expanded", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hay = "haystacks_expanded.__main__:cli"
